
[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/ui/TileChoiceWindow.gd" type="Script" id="1"]

[node name="TileChoiceWindow" type="CanvasLayer"]
visible = false
layer = 1
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.5)
mouse_filter = 1

[node name="Frame" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0

[node name="Content" type="VBoxContainer" parent="Frame"]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
custom_constants/separation = 16

[node name="Title" type="Label" parent="Frame/Content"]
text = "Totem Choice"
horizontal_alignment = 1

[node name="Choices" type="HBoxContainer" parent="Frame/Content"]
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Bottom" type="HBoxContainer" parent="Frame/Content"]
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="TierLabel" type="Label" parent="Frame/Content/Bottom"]
text = "Tier 1"

[node name="Spacer" type="Control" parent="Frame/Content/Bottom"]
size_flags_horizontal = 3

[node name="EvolveBtn" type="Button" parent="Frame/Content/Bottom"]
text = "Evolve"

[node name="CloseBtn" type="Button" parent="Frame/Content/Bottom"]
text = "Skip"
